# SharpApex

./: README.md
Vertex model simulation and cell expansion division analysis/: CMakeLists.txt  README.md
Vertex model simulation and cell expansion division analysis/Guide/: codes list.docx
Vertex model simulation and cell expansion division analysis/Guide/Reference Manual/: 4 Geometrics of Cells and Organs.md  (+1 more)
Vertex model simulation and cell expansion division analysis/include/: Analysis2dv.h  Cell2dv.h  IO2dv.h  Initial2dv.h  Line2dv.h  Organ2dv.h  Vertex2dv.h  class2dv.h  codes_not_in_use.txt  division.h  force2dv.h  geo2dv.h  gnuplot.h  image2dv.h  parameter2dv.h  vtk2dv.h  wangMath.h  wangSystem.h
Vertex model simulation and cell expansion division analysis/input/: 2dv_cell0011400000.vtk  2dv_line0011400000.vtk  61cells.txt  7cells.txt  area_control_circle_shape.tiff  batch_parameters.xlsx  mode.txt  outline.txt  parameter.txt
Vertex model simulation and cell expansion division analysis/src/: Analysis2dv.cpp  Cell2dv.cpp  IO2dv.cpp  Initial2dv.cpp  Line2dv.cpp  Organ2dv.cpp  Vertex2dv.cpp  division.cpp  force2dv.cpp  geo2dv.cpp  gnuplot.cpp  image2dv.cpp  main.cpp  parameter2dv.cpp  vtk2dv.cpp  wangMath.cpp  wangSystem.cpp
Vertex model simulation and cell expansion division analysis/wLib/: CMakeLists.txt
contour growth mapping/: CMakeLists.txt  diagram.gp
contour growth mapping/include/: class.h  geo.h  growth.h  initialization.h  mathw.h  plot.h
contour growth mapping/input/: 1_0_contour_equal_distance_100.txt  av_boundary_points_sampled.txt
contour growth mapping/src/: geo.cpp  growth.cpp  initialization.cpp  main.cpp  plot.cpp
(+29 files in other folders)
